--- a/client/src/index.css
+++ b/client/src/index.css
@@ -182,7 +182,7 @@
     margin-bottom: 50px;
     height: 330px;
     width: 600px;
-    border: black dashed 4px;
+    border: rgb(138, 135, 135) dashed 4px;
     background-color: #F2F4F4;
 
 }
